# cop4534-p3

./: BruteForce.cpp  BruteForce.hpp  CMakeLists.txt  FileParser.cpp  FileParser.hpp  Genetic.cpp  Genetic.hpp  Makefile  MatrixManager.cpp  MatrixManager.hpp  PermutationGenerator.cpp  PermutationGenerator.hpp  UML_Diagram  main.cpp
Google_Tests/: CMakeLists.txt  testFileParser.cpp  testMatrixManager.cpp  testPermutationGenerator.cpp
